// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path matches the snapshot 1`] = `
<div
  class="gl-path-nav"
  data-testid="gl-path-nav"
>
  <span
    class="gl-path-fade gl-path-fade-left"
    style="display: none;"
  >
    <button
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-left"
        size="32"
      />
    </button>
  </span>
   
  <ul
    class="gl-path-nav-list"
  >
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button gl-path-active-item-indigo"
      >
        <!---->
        
        First
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Second
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Third
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Fourth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Fifth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Sixth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Seventh
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Eighth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Ninth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Tenth
        <!---->
      </button>
    </li>
  </ul>
   
  <span
    class="gl-path-fade gl-path-fade-right"
    style="display: none;"
  >
    <button
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-right"
        size="32"
      />
    </button>
  </span>
</div>
`;

exports[`Path renders the list of items with icons matches the snapshot 1`] = `
<div
  class="gl-path-nav"
>
  <span
    class="gl-path-fade gl-path-fade-left"
    style="display: none;"
  >
    <button
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-left"
        size="32"
      />
    </button>
  </span>
   
  <ul
    class="gl-path-nav-list"
  >
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button gl-path-active-item-indigo"
      >
        <gl-icon-stub
          class="gl-mr-2"
          data-testid="gl-path-item-icon"
          name="home"
          size="16"
        />
        
        First
        <span
          class="gl-font-weight-normal gl-pl-2"
        >
          12d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Second
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Third
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Fourth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Fifth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Sixth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Seventh
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Eighth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Ninth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Tenth
        <!---->
      </button>
    </li>
  </ul>
   
  <span
    class="gl-path-fade gl-path-fade-right"
    style="display: none;"
  >
    <button
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-right"
        size="32"
      />
    </button>
  </span>
</div>
`;

exports[`Path renders the list of items with metrics matches the snapshot 1`] = `
<div
  class="gl-path-nav"
  data-testid="gl-path-nav"
>
  <span
    class="gl-path-fade gl-path-fade-left"
    style="display: none;"
  >
    <button
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-left"
        size="32"
      />
    </button>
  </span>
   
  <ul
    class="gl-path-nav-list"
  >
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button gl-path-active-item-indigo"
      >
        <!---->
        
        First
        <span
          class="gl-font-weight-normal gl-pl-2"
        >
          12d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Second
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Third
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Fourth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Fifth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Sixth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Seventh
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Eighth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Ninth
        <!---->
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
    >
      <button
        class="gl-path-button"
      >
        <!---->
        
        Tenth
        <!---->
      </button>
    </li>
  </ul>
   
  <span
    class="gl-path-fade gl-path-fade-right"
    style="display: none;"
  >
    <button
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-right"
        size="32"
      />
    </button>
  </span>
</div>
`;
